--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.jvmargs=-Xmx2G
 
 # Mod Properties
 	mod_version = 0.1alpha
-	maven_group = com.example
-	archives_base_name = food-mod
+	maven_group = com.link
+	archives_base_name = foodmod
 
 # Dependencies
 	fabric_version=0.37.0+1.17
