--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx2G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 0.1alpha
+	mod_version = 1.0
 	maven_group = com.link
 	archives_base_name = foodmod
 
