--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx2G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.0
-	maven_group = com.link
+	mod_version = 1.1
+	maven_group = com.example
 	archives_base_name = foodmod
 
 # Dependencies
