--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ plugins {
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_8
-targetCompatibility = JavaVersion.VERSION_8
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
