--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx2G
 
 # Mod Properties
 	mod_version = 1.3
-	maven_group = com.example
+	maven_group = com.link
 	archives_base_name = foodmod
 
 # Dependencies
