--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,18 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build
+        uses: actions/download-artifact@v2
+        with:
+          name: Artifacts
+      - name: display file struct
+        run: ls -lStr
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with: |
+          LICENSE
