--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           name: Artifacts
           path: build/libs/
   release:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
