--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx2G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 1.3
-	maven_group = com.example
+	mod_version = 1.4
+	maven_group = com.link
 	archives_base_name = foodmod
 
 # Dependencies
