--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx2G
     loader_version=0.12.2
 
 # Mod Properties
-	mod_version = 1.8
+	mod_version = 1.9-alpha
 	maven_group = com.link
 	archives_base_name = foodmod
 
